<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.gifapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">


        <action
            android:id="@+id/action_gifs_fragment_to_gif_detain"
            app:destination="@id/navigation_dashboard">

        </action>
        <action
            android:id="@+id/navigate_to_gif_details"
            app:destination="@id/navigation_dashboard"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_enter_anim" />


    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.gifapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <argument
            android:name="title"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="link"
            android:defaultValue=""
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.gifapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>