<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".ui.GifsFragment">

    <TextView
        android:id="@+id/connection_lost_warning"
        android:layout_width="0dp"
        android:layout_height="@dimen/warning_height"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginVertical="@dimen/margin_medium"
        android:background="@drawable/warning_shape"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/network_connection_lost"
        android:textColor="@color/text3"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection_lost_warning"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_gif"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginVertical="@dimen/margin_medium"
                android:visibility="visible" />

            <Button
                android:id="@+id/manage_gifs_btn"
                style="@style/GifButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/load_next_btn_text" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/options_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/options_switch_text_delete"
                android:textSize="@dimen/text_button" />
            <!--todo check color-->
<!--            app:thumbTint="@color/gif_button_background"-->
<!--            app:trackTint="@color/gif_button_background"-->


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loader_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:elevation="@dimen/elevation"
        android:visibility="gone"
        app:constraint_referenced_ids="loader_view, loader_background"
        tools:visibility="visible" />

    <View
        android:id="@+id/loader_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/loading_background"
        android:elevation="@dimen/elevation" />

    <ProgressBar
        android:id="@+id/loader_view"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_gravity="center"
        android:elevation="@dimen/elevation"
        android:indeterminateTint="@color/additional_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gifs_loading_error_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginVertical="@dimen/margin_medium"
        android:text="@string/empty_list_message"
        android:textAlignment="center"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Gif loading error"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>